Fixed invisible bottom corners in message dialog
closes #203

--- a/Communitheme/gtk-3.0/_common.scss
+++ b/Communitheme/gtk-3.0/_common.scss
@@ -4552,7 +4552,6 @@ decoration {
   }
 
   messagedialog.csd & {
-    border-radius: $large_radius;
     box-shadow: 0 1px 2px transparentize(black, 0.8),
                 0 0 0 1px transparentize($_wm_border, 0.1);
   }
